# ChangeLog for app-arch/upx
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.22 2009/01/01 03:40:24 matsuu Exp $

  01 Jan 2009; MATSUU Takuto <matsuu@gentoo.org> -upx-2.02.ebuild,
  -upx-3.00.ebuild:
  Removed old versions.

  30 Nov 2008; Markus Meier <maekke@gentoo.org> upx-3.03.ebuild:
  amd64/x86 stable, bug #249120

  05 May 2008; Olivier Crête <tester@gentoo.org> upx-3.00.ebuild:
  Stable on amd64

*upx-3.03 (28 Apr 2008)

  28 Apr 2008; MATSUU Takuto <matsuu@gentoo.org> +upx-3.03.ebuild:
  Version bumped, bug #218471.

*upx-3.00 (02 Jul 2007)

  02 Jul 2007; MATSUU Takuto <matsuu@gentoo.org> +upx-3.00.ebuild:
  Version bumped, bug #183974.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> upx-1.25.ebuild,
  upx-2.02.ebuild:
  (QA) RESTRICT clean up.

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> upx-2.02.ebuild:
  x86 stable

*upx-2.02 (09 Sep 2006)

  09 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> -upx-1.24-r1.ebuild,
  -upx-1.93.ebuild, +upx-2.02.ebuild:
  Version bumped, bug 145049.
  Removed old versions.

*upx-1.93 (05 Nov 2005)

  05 Nov 2005; MATSUU Takuto <matsuu@gentoo.org> +upx-1.93.ebuild:
  Version bumped. Bug 103833.

  03 Sep 2005; MATSUU Takuto <matsuu@gentoo.org> upx-1.25.ebuild:
  Stable on x86. Bug 103831.

*upx-1.25 (09 Jul 2004)

  09 Jul 2004; MATSUU Takuto <matsuu@gentoo.org> +upx-1.25.ebuild:
  Version bump. bug #56143.

  16 Apr 2004; Michael McCabe <randy@gentoo.org> upx-1.24-r1.ebuild:
  adding s390 keywords

  01 Nov 2003; Brandy Westcott brandy@gentoo.org upx-1.24-r1.ebuild,
  upx-1.24.ebuild:
  Add a block for app-arch/upx-ucl.

*upx-1.24-r1 (25 Mar 2003)

  25 Mar 2003; Seemant Kulleen <seemant@gentoo.org> upx-1.24-r1.ebuild:
  moved binary into /opt, closing bug #17794 by robbat2
  <robbat2@orbis-terrarum.net>

*upx-1.24 (23 Dec 2002)

  01 Jan 2003; Nick Hadaway <raker@gentoo.org> upx-1.24.ebuild :
  Marked stable.
