@@ -1,8 +1,34 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST upx-1.25-linux.tar.gz 161636 RMD160 0f2ddde8ff6d1fc49fc904e6e9aad73dafd6500c SHA1 cdccd70b7e87f2077084dc179a86543de20d8a3a SHA256 85e4a2d25433fb4a1e87661c5528ed626e74c4e610ab9599a23e833d1b3c50b9
 DIST upx-3.03-amd64_linux.tar.bz2 380061 RMD160 0b32b238d01a81db3cbaad51fa3aab5a0d0d9bd2 SHA1 269ab7eb0edaa6b572502e78fc5f9ec27cd449af SHA256 31d4f223f4f11496cbc75f857162cf1283c2826ac86df0ec167c70909516b013
 DIST upx-3.03-i386_linux.tar.bz2 364705 RMD160 3bf53c051e2c933e1158a2dc4fd333c36ce4bab2 SHA1 9c2322a1cb5861f8fb33ccfc34a340b1094605ff SHA256 a8bf0913cd3e761d59096ac42cc63e78272d651671de07f8f30e547916177508
 DIST upx-3.03-powerpc_linux.tar.bz2 525401 RMD160 605bbfa159787d32b1c9d51aabe51189f0429877 SHA1 1e14e86d03b53181bc32d251ada115a6b23c08d5 SHA256 a38e8c49f040e3674b3421dcbfc7680ed6c942452bc6bc34f267c9539f924abb
+DIST upx-3.04-amd64_linux.tar.bz2 393376 RMD160 de339855c910a6d0d02d2c766b8af55b43f4ec6d SHA1 4247559bed0fd5684f33823dd10ba0a4424a3886 SHA256 fb0cb9eec69dbf4c19802e5ebf9dd8bb286f5516c2af17fb676810e6f11bafc6
+DIST upx-3.04-armeb_linux.tar.bz2 397790 RMD160 5d7835d0d0428a69754df6b3c761e20ef46f8112 SHA1 69f6818d813f243c8c9800afbab38de742a69956 SHA256 9f3966ce5b280ca502fcc16a90b08d0e82348058c67b989e4f2a57da904814d2
+DIST upx-3.04-i386_linux.tar.bz2 378665 RMD160 f245efc6aa780b2f380f15d8041db4739cbd9bd1 SHA1 4fae2697b6f96614bee1520a6d87811c00cf4335 SHA256 7f909f7900c8b108fa0b01296aae493da52614af29f6b3d76d18f289c165e67b
+DIST upx-3.04-mipsel_linux.tar.bz2 604996 RMD160 3a37dfb6c4adbee48f6996c52d82f33b2f8bf524 SHA1 514f231c02befc7492134ca716e614ab7e227bf3 SHA256 e3aa47fd97b7572e559aa4eca395bdcf699cf4103b06938afeeefd216a5da24c
+DIST upx-3.04-powerpc_linux.tar.bz2 537784 RMD160 f14916c560637a04ae3118a2f1536c502a4b3c34 SHA1 7bed8d17b21c6f061d7b560057bb98378c6d3f11 SHA256 096349c26b63be7cfe81ff12e1494b419d0224bf1203def97fdc68cc49ee6d4a
 EBUILD upx-1.25.ebuild 676 RMD160 e247970a4366906443d090ac313d8edcbf6b0044 SHA1 ad7d6a74bcc4888f39e9d728ca4aaef4c5907df2 SHA256 8b28fb5abce3bb9b99ae3c4e6ec0ae5c6c2231bc1479f3dce8f22f6dfa1b9ff8
 EBUILD upx-3.03.ebuild 1004 RMD160 e5dfe474acef4c352112edabfa7a936465e3e142 SHA1 f4333471c53748d1de013d53832e39a54b83cae1 SHA256 178c53affe87095e0c6b1589af09c9654d8d0e3166d53757f81f39cdfc6f7261
-MISC ChangeLog 2841 RMD160 8895d8032b67959b9d47c736c39e0ce381625182 SHA1 da830cecfe0e84171f0c2c3d5f6bf126e0db2ed5 SHA256 5c21264c9bc189970f69e394e307453ca36c23b7088270cd2c7a0ed0d9963024
+EBUILD upx-3.04.ebuild 1027 RMD160 95ad5981b6615349d618af6843e8b4ffcfa1bdaf SHA1 69dee6a9445481a7a60ec924cfeff4567f8ca5d4 SHA256 4e8141df90aad731571faccce8501906168c48e7c7e816626bb7f4d2e85fa701
+MISC ChangeLog 3051 RMD160 8f63652d6919a555564d81bde535ddd2c1736128 SHA1 ea56b4df4bb0a5989a4256ac6cd2389013acf52a SHA256 5504f62252ac786ce93a80c6fe0f8141430ed82a531d12c7f58a3e65ea320ec2
 MISC metadata.xml 331 RMD160 5edcd4c215f26c4d37e53142335d2920e1e95331 SHA1 c854b17a0238d51c6fb3d9a7bbef1151bf84a659 SHA256 7797ae69a11615df558d8564ea48098f02119948162a32d13cdb70f3b0391593
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iQIcBAEBAgAGBQJLpEaeAAoJECaGw+YFKA1pxtYP/138E0oQNaPXxJKxWFjVeFWo
+QZo3oe5S47Q+EoH6O0GzTgf8mc+MX7uPzNwPPYBTPY0ScPbCS2r9CqJE7BgS6Mck
+lrLhdckxFTqIFqrG44inY6hJqpVPjuBlL6oaufimlg7YLVt8OQuICtGxzxg7i40I
+cwVBx1eN6GF5QqtzlOtmX/RjuadM22pxU2m9mrjacMoOHBdrNuPHLGlLuxkITVdW
+djfRxgWhqJv46a423NGKRuDVelgO7YRYqDq7TMsO2IfkoNZbsuXjOdW4lZWcaUOi
+TaLwPeYtviRKlJJYMBPNPf5QzDJ10coSNiTP9LXSmXaQCgmyIJFp9MKHLxqXMYvV
+MxPxIBl+wsqGUaRDYDB1pkmm9YlWAs1XjOOQzGXxaldzlLZRKXhSa5NpIvDgJswj
+FTzzsOHWj3OWa8v1CXGZ4dyCAaBu6TSpWd+rAKA4+B9q1STpC1zlYnLyKJiEfMBc
+MD9TeK798cWAyT+IrqGHVgm7syAV9nvaHO3Mu7iH5zUt/gfhn+GclMU4LGkKLl4N
+J7rh8FJLlWCDb8TT7Q1EuP1N7R+AFqFsZL3W1W//x03mmBTSb6886kAjQ+rpXckn
+xIaZerlHI/ONWWej8tJakSbg1l5mkVS7sLDvVzp7xsFjKKODC7upRK4DhW/lDvAp
+lmcsHYyVTcdsWLlWSjDL
+=Rn4n
+-----END PGP SIGNATURE-----
