@@ -1,6 +1,14 @@
 # ChangeLog for app-arch/upx
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.22 2009/01/01 03:40:24 matsuu Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.23 2010/03/20 03:52:53 matsuu Exp $
+
+  20 Mar 2010; MATSUU Takuto <matsuu@gentoo.org> +upx-3.04.ebuild:
+  Version bumped.
+
+*upx-3.04 (20 Mar 2010)
+
+  20 Mar 2010; MATSUU Takuto <matsuu@gentoo.org> +upx-3.04.ebuild:
+  Version bumped, bug #309503.
 
   01 Jan 2009; MATSUU Takuto <matsuu@gentoo.org> -upx-2.02.ebuild,
   -upx-3.00.ebuild:
